# FamilyCircle

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a236bae8718a_create_user_model.py  b7c863a6595d_create_refresh_token_model.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  minio_setup.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 05a7d9bb201f_create_report_images_model.py  19172480821d_add_avatar_field_to_user_model.py  1ae2564252d0_create_report_model.py  33dbb2d7a5a0_update_report_model.py  5e539f082155_update_request_model.py  801c4ac20bdb_add_thanks_model.py  856096a85ffe_add_is_has_avatar_field_in_elder_model.py  a236bae8718a_create_user_model.py  c2490701ea09_add_new_fields_in_user_model.py  c53b3a77a6b5_add_response_model.py  d4a5795cc8b5_add_check_list_field_to_request_model.py  (+3 more)
backend/front/: feed.html  index.html  input.html  profile.html  rating.html  rating_volunteer.html  regis_R.html  register-volunteer.html  relative_profile.html  relative_scroll.html  requests.html  thanks.html  volunteer_scroll.html  zaivka.html  zaivka_volunteer.html
backend/src/: config.py  main.py  minio.py
backend/tests/: conftest.py  pytest.ini  test_requests.py  test_users.py
front/: index.html  input.html  profile.html  regis_R.html  regis_V.html  zaivka.html
front/css/: style.css  style_help.css  style_index.css  style_index_help.css  zaivka.css
front/js/: auth.js  index_help.js  login-handler.js  profile.js  regis.js  zaivka.js
frontend/: comments_relative.html  comments_volunteer.html  rating_volunteer.html  relative_profile.html  relative_scroll.html  relative_thanks.html  volunteer_profile.html  volunteer_scroll.html  zaivka_volunteer.html
src/: config.py  database.py  main.py
src/users/: models.py  router.py  schemas.py  utils.py
(+47 files in other folders)
