[project]
name = "family-circle"
version = "0.1.0"
description = "Сервис онлайн-помощи для пожилых людей, родственников и волонтёров"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.4",
    "ruff>=0.14.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
